# aws-insurance-underwriting-gen-ai

./: .gitignore  README.md  cdk.json  deploy.sh  destroy.sh  package-lock.json  package.json
assets/custom-resource/: Dockerfile  pyproject.toml
assets/custom-resource/custom_resource/: indices_custom_resource.py
assets/lambda/base64-encode/: base64_encode.py  classification.prompt  extract_name_and_license.prompt
assets/lambda/combine-retrieved-information/: combine_retrieved_information.py
assets/lambda/dmv-api-call/: dmv_api_call.py  underwriting_validation.prompt
assets/lambda/generate-final-prompt/: generate_final_prompt.py
assets/state-machine/: retrieve_underwriting_information.prompt  step-functions-definition.json
src/: app-stack.ts  app.ts
src/constructs/: bedrock-kb-construct.ts  event-bridge-construct.ts  lambda-construct.ts  opensearch-construct.ts  s3-construct.ts  state-machine-construct.ts
