[build-system]
requires = [ "poetry_core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "custom_resource"
version = "0.1.0"
description = "Package to deploy custom resources for OpenSearch indices"
authors = [ "Maksim (Max) Tybar" ]

[tool.poetry.dependencies]
boto3 = "^1.33.6"
opensearch-py = "^2.4.2"
requests_aws4auth = "^1.1.1"
python = "^3.11"

[tool.poetry.dev-dependencies]
mypy = "^1.2.0"
pytest = "^7.4.3"
